--- a/index.html
+++ b/index.html
@@ -413,6 +413,18 @@
             </li>
           </ul>
         </div>
+        <form action="#" class="subscription">
+          <p class="text-subscription">Подпишитесь на рассылку</p>
+          <div class="wrapper-send">
+            <input class="input-subscription" type="email" placeholder="E-mail" />
+            <button type="submit" class="btn-subscription">
+              Подписаться
+              <svg class="icon-send" width="24" height="24">
+                <use href="./images/aicons.svg#icon-send" class="icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
