--- a/index.html
+++ b/index.html
@@ -434,7 +434,26 @@
             <use href="./images/aicons.svg#close"></use>
           </svg>
         </button>
-      </div>
+        
+        <b class="modal-title">Оставьте свои данные, мы вам перезвоним</b>
+        <form action="#" class="modal-form">
+          <label class="" for="">Имя</label>
+          <input type="text" class="modal-form-input" /> 
+          <svg  width="18" height="18" class="input-icon">
+            <use href="./images/aicons.svg#person-black"></use>
+          </svg>
+          <labe class="" for="">Телефон</labe>
+          <input type="tel" class="modal-form-input" />
+          <svg  width="18" height="18" class="input-icon">
+            <use href="./images/aicons.svg#phone-black"></use>
+          </svg>
+          <labe class="" for="">Почта</labe>
+          <input type="email" class="modal-form-input" />
+          <svg  width="18" height="18" class="input-icon">
+            <use href="./images/aicons.svg#email-black"></use>
+          </svg>
+        </form>
+      
     </div>
     <script src="./JS/modal.js"></script>
   </body>
