--- a/index.html
+++ b/index.html
@@ -427,34 +427,39 @@
         </form>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-close-icon" width="11" height="11">
             <use href="./images/aicons.svg#close"></use>
           </svg>
         </button>
-        
         <b class="modal-title">Оставьте свои данные, мы вам перезвоним</b>
         <form action="#" class="modal-form">
-          <label class="" for="">Имя</label>
-          <input type="text" class="modal-form-input" /> 
-          <svg  width="18" height="18" class="input-icon">
-            <use href="./images/aicons.svg#person-black"></use>
-          </svg>
-          <labe class="" for="">Телефон</labe>
-          <input type="tel" class="modal-form-input" />
-          <svg  width="18" height="18" class="input-icon">
-            <use href="./images/aicons.svg#phone-black"></use>
-          </svg>
-          <labe class="" for="">Почта</labe>
-          <input type="email" class="modal-form-input" />
-          <svg  width="18" height="18" class="input-icon">
-            <use href="./images/aicons.svg#email-black"></use>
-          </svg>
+          <label for="user-name"> Имя </label>
+          <div class="input-wrap">
+            <input type="text" class="modal-form-input" id="user-name" />
+            <svg width="18" height="18" class="input-icon">
+              <use href="./images/aicons.svg#person-black"></use>
+            </svg>
+          </div>
+          <label for="user-tel">Телефон</label>
+          <div class="input-wrap">
+            <input type="tel" class="modal-form-input" id="user-tel" />
+            <svg width="18" height="18" class="input-icon">
+              <use href="./images/aicons.svg#phone-black"></use>
+            </svg>
+          </div>
+          <label for="user-mail">Почта</label>
+          <div class="input-wrap">
+            <input type="email" class="modal-form-input" id="user-mail" />
+            <svg width="18" height="18" class="input-icon">
+              <use href="./images/aicons.svg#email-black"></use>
+            </svg>
+          </div>
         </form>
-      
+      </div>
     </div>
-    <script src="./JS/modal.js"></script>
+    <!-- <script src="./JS/modal.js"></script> -->
   </body>
 </html>
