--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         </form>
       </div>
     </footer>
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-close-icon" width="11" height="11">
@@ -438,28 +438,42 @@
         <form action="#" class="modal-form">
           <label for="user-name"> Имя </label>
           <div class="input-wrap">
-            <input type="text" class="modal-form-input" id="user-name" />
+            <input type="text" class="modal-form-input" name="user-name" id="user-name" />
             <svg width="18" height="18" class="input-icon">
               <use href="./images/aicons.svg#person-black"></use>
             </svg>
           </div>
           <label for="user-tel">Телефон</label>
           <div class="input-wrap">
-            <input type="tel" class="modal-form-input" id="user-tel" />
+            <input type="tel" class="modal-form-input" name="user-tel" id="user-tel" />
             <svg width="18" height="18" class="input-icon">
               <use href="./images/aicons.svg#phone-black"></use>
             </svg>
           </div>
           <label for="user-mail">Почта</label>
           <div class="input-wrap">
-            <input type="email" class="modal-form-input" id="user-mail" />
+            <input type="email" class="modal-form-input" name="user-mail" id="user-mail" />
             <svg width="18" height="18" class="input-icon">
               <use href="./images/aicons.svg#email-black"></use>
             </svg>
           </div>
+          <p class="comment-modal">Комментарий</p>
+          <textarea name="inline-text" class="area-text" placeholder="Введите текст"></textarea>
+          <div class="wrap-check">
+            <input type="checkbox" name="policy" id="policy" class="modal-check visually-hidden" />
+            <label for="policy" class="check-text">
+              <span class="check-item">
+                <svg width="11" height="8" class="check-icom">
+                  <use href="./images/aicons.svg#check"></use>
+                </svg>
+              </span>
+              Соглашаюсь с рассылкой и принимаю <a href="" class="link-check">Условия договора</a>
+            </label>
+          </div>
+          <button type="submit" class="btn-modal">Отправить</button>
         </form>
       </div>
     </div>
-    <!-- <script src="./JS/modal.js"></script> -->
+    <script src="./JS/modal.js"></script>
   </body>
 </html>
